created: footer for desktop

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
         </div>
         <!-- /.footer__list -->
         <div class="footer__social-network">
-          <h3 class="footer__title">Social Network</h3>
+          <h3 class="footer__title footer__title--inline">Social Network</h3>
           <div class="footer__social-links">
             <a href="#" class="footer__link"><img src="/img/facebook-icon.svg" alt="Facebook icon"></a>
             <a href="#" class="footer__link"><img src="/img/youtube-icon.svg" alt="Youtube icon"></a>
@@ -588,7 +588,7 @@
           <!-- /.footer__social-links -->
         </div>
         <!-- /.footer__social-network -->
-        <div class="footer__list footer__additional">
+        <div class="footer__list footer__legal">
           <h3 class="footer__title">Legal information</h3>
           <ul class="footer__ul">
             <li class="footer__item"><a href="#" class="footer__link">Terms & Conditions</a></li>
@@ -598,17 +598,17 @@
           </ul>
         </div>
         <!-- /.footer__list -->
-        <div class="contact-details">
-          <h3 class="footer__title">Contact details></h3>
+        <div class="footer__contact-details">
+          <h3 class="footer__title">Contact details</h3>
           <p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
           <ul class="footer__list">
-            <li class="footer__item">
+            <li class="footer__item footer__contact-text">
               <div class="footer__icon">
                 <img src="/img/map-pointer-icon.svg" alt="map">
               </div>
               9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States
             </li>
-            <li class="footer__item">
+            <li class="footer__item footer__contact-text">
               <div class="footer__icon">
                 <img src="/img/phone-footer.svg" alt="phone">
               </div>
@@ -616,7 +616,7 @@
               Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
               Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
             </li>
-            <li class="footer__item">
+            <li class="footer__item footer__contact-text">
               <div class="footer__icon">
                 <img src="/img/email-icon.svg" alt="e-mail">
               </div>              
@@ -626,17 +626,31 @@
           <!-- /.footer__list -->
         </div>
         <!-- /.contact-details -->
-        <div class="footer__contact-form">
+        <div class="footer__send-message">
           <h3 class="footer__title">Send us a message</h3>
           <form action="#" class="footer__form">
-            <input type="text" class="input footer__input" placeholder="Your Full Name*">
-            <input type="text" class="input footer__input" placeholder="Phone Number*">
+            <div class="footer__required-fields">
+              <input type="text" class="input footer__input" placeholder="Your Full Name*">
+              <input type="text" class="input footer__input" placeholder="Phone Number*">
+            </div>            
             <textarea class="footer__message" cols="30" rows="10" placeholder="Message"></textarea>
+            <div class="footer__send">
             <button class="button footer__button">Send</button>
             <span class="footer__info">* Required Fields</span>
+            </div>
+            <!-- /.footer__send -->
           </form>
         </div>
         <!-- /.footer__contact-form -->
+        <nav class="disclaimer">
+          <ul class="disclaimer__list">
+            <li class="disclaimer__item"><a href="#" class="disclaimer__link">Disclaimer</a></li>
+            <li class="disclaimer__item"><a href="#" class="disclaimer__link">Conditions of use</a></li>
+            <li class="disclaimer__item"><a href="#" class="disclaimer__link">Cancellation policy</a></li>
+          </ul>
+        </nav>
+        <!-- /.disclaimer -->
+        <img src="/img/bank-cards.png" alt="Bank card" class="cards cards__block">
       </div>
       <!-- /.footer-wrapper -->
     </div>
