create: created PHP mailer for newsletter subscr.

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         </span>
       </h2>
       <!-- /.newsletter-title -->
-      <form action="subscribe.php" class="subscribe newsletter__subscribe">
+      <form action="subscribe.php" method="post" class="subscribe newsletter__subscribe">
         <input type="text" class="subscribe__input" placeholder="Your email address" name="email">
         <button class="subscribe__button">
           Send
