--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         </span>
       </h2>
       <!-- /.newsletter-title -->
-      <form action="subscribe.php" class="subscribe newsletter__subscribe">
+      <form action="subscribe.php" method="post" class="subscribe newsletter__subscribe">
         <input type="text" class="subscribe__input" placeholder="Your email address" name="email">
         <button class="subscribe__button">
           Send
@@ -647,7 +647,7 @@
               <input type="text" class="input footer__input" placeholder="Your Full Name*" name="name">
               <input type="text" class="input footer__input" placeholder="Phone Number*" name="phone">
             </div>            
-            <textarea class="footer__message" cols="30" rows="10" placeholder="Message" name="message"></textarea>
+            <textarea class="message footer__message" cols="30" rows="10" placeholder="Message" name="message"></textarea>
             <div class="footer__send">
             <button class="button footer__button">Send</button>
             <span class="footer__info">* Required Fields</span>
@@ -671,6 +671,32 @@
     <!-- /.container -->
   </footer>
   <!-- /.footer -->
+  <div class="modal">
+    <div class="modal__overlay"></div>
+    <!-- /.modal__overlay -->
+    <div class="modal__dialog">
+      <img class="modal__close" src="img/close.svg" alt="icon: close">
+      <div class="modal__booking">
+        <h3 class="modal__title">booking</h3>
+        <form action="#" method="post" class="modal__form">
+          <div class="modal__required-fields">
+            <input type="text" class="input modal__input" placeholder="Your Full Name*" name="name">
+            <input type="text" class="input modal__input" placeholder="Phone Number*" name="phone">
+            <input type="text" class="input modal__input" placeholder="Email*" name="email">
+          </div>
+          <textarea class="message modal__message" placeholder="Message" name="message"></textarea>
+          <div class="modal__send">
+            <button class="button modal__button">Send</button>
+            <span class="modal__info">* Required Fields</span>
+          </div>
+          <!-- /.modal__send -->
+        </form>
+      </div>
+      <!-- /.modal__contact-form -->
+    </div>
+    <!-- /.modal__dialog -->
+  </div>
+  <!-- /.modal -->
   <script src="js/swiper-bundle.min.js"></script> 
   <script src="js/main.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
