--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="hotel-description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
           </div>
           <!-- /.hotel-info__text -->
-          <div class="rating hotel-info__rating">
+          <div data-toggle = "modal" class="rating hotel-info__rating">
             <span class="rating-text">User Ratings</span>
             <span class="rating-count">4.5/5</span>
           </div>
@@ -173,7 +173,7 @@
                   </a>
                 </div>
                 <!-- /.booking__call-center -->
-                <button class="button booking__button">View Other Options</button>
+                <button data-toggle="modal" class="button booking__button">View Other Options</button>
               </div>
               <!-- /.booking -->
               <div class="map">
@@ -697,6 +697,7 @@
     <!-- /.modal__dialog -->
   </div>
   <!-- /.modal -->
+  <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script> 
   <script src="js/main.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
