--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         <!-- /.contact-details -->
         <div class="footer__send-message">
           <h3 class="footer__title">Send us a message</h3>
-          <form action="send.php" method="post" class="footer__form">
+          <form action="send.php" method="post" class="footer__form form">
             <div class="footer__required-fields">
               <input type="text" class="input footer__input" placeholder="Your Full Name*" name="name" required minlength="3">
               <input type="tel" class="input footer__input" placeholder="Phone Number*" name="phone" required>
@@ -682,7 +682,7 @@
       <img class="modal__close" src="img/close.svg" alt="icon: close">
       <div class="modal__booking">
         <h3 class="modal__title">booking</h3>
-        <form action="send.php" method="post" class="modal__form" id="modalForm">
+        <form action="send.php" method="post" class="modal__form form" id="modalForm">
           <div class="modal__required-fields">
             <input type="text" class="input modal__input" placeholder="Your Full Name*" name="name" required minlength="3">
             <input type="tel" class="input modal__input" placeholder="Phone Number*" name="phone" required>
@@ -708,7 +708,7 @@
       <img class="modal__close" src="img/close.svg" alt="icon: close">
       <div class="modal__booking">
         <h3 class="modal__title">send us feedback</h3>
-        <form action="#" method="post" class="modal__form">
+        <form action="#" method="post" class="modal__form form">
           <div class="modal__required-fields">
             <input type="text" class="input modal__input" placeholder="Your Full Name*" name="name" required minlength="3">
             <input type="tel" class="input modal__input" placeholder="Phone Number*" name="phone" required>
@@ -728,9 +728,9 @@
   </div>
   <!-- /.modal -->
   <script src="js/jquery-3.1.1.min.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
-  <script src="js/jquery.mask.min.js" type="text/javascript"></script>
+  <script src="js/jquery.mask.min.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="js/parallax/parallax.js"></script>
